Add comments with task descriptions

--- a/ShowAnAlert/index.html
+++ b/ShowAnAlert/index.html
@@ -6,6 +6,7 @@
     </head>
     <body>
         <h1>Show an alert</h1>
+        <!-- Create a page that shows a message "I'm JavaScript". -->
         <script>
             alert("I'm JavaScript!");
         </script>
